@@ -58,6 +58,7 @@ Version 4.5.1
 
 * Save task in task read view throws exception
 * Inconsistent time logging permission
+* Throws exception if user save an empty search criteria
 
 Version 4.5.0
 -----------------------------
